[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "TP-VulnBox"
version = "2026.3.15"
description = "VulnBox is a container that is intentionally designed with vulnerabilities to allow security professionals to practice and improve their offensive security skills, such as penetration testing and vulnerability assessment"
keywords = ["TPCyberSec", "VulnBox", "CVE", "Offensive Security", "Penetration Testing", "Vulnerability Assessment"]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["dependencies"]

authors = [{ name = "TP Cyber Security", email = "tpcybersec2023@gmail.com" }]

classifiers = [
	"Programming Language :: Python :: 3"
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Homepage = "https://github.com/TPCyberSec/TP-VulnBox"

[project.scripts]
TP-VulnBox = "VulnBox:main"

[tool.setuptools.packages.find]
where = ["."]